# paper_mario_rando_statistics

./: .env.example  .gitignore  Cargo.toml  README.md  api.go  data.go  db.go  go.mod  go.sum  jobs.go  main.go  mix.exs  routes.go  util.go  util_test.go  worker.go
app/: main.go
assets/: tailwind.config.js
client/: README.md  index.html  package.json  pnpm-lock.yaml
client-old/: package.json  pnpm-lock.yaml
client-old/src/: types.ts
client-old/src/coordinators/: statistic.coordinator.ts
client-old/src/data-controllers/: category.controller.ts
client-old/src/ui-managers/: card.ui.ts  raw-data-table.ui.ts  ui-manager.ui.ts
client-vue/: index.html  package.json  pnpm-lock.yaml
client-vue/src/: App.vue  config.ts  style.css
client-vue/src/services/: statisticsApi.ts
client/src/: App.vue  filters.ts  main.ts  statistic-controller.ts  style.css  types.ts  util.ts  utils.ts
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
domain/: data.go
internal/rest/: entrant.go  statistics.go
internal/services/: racetime.go
internal/utils/: statistics.go  util_test.go
lib/: paper_mario_rando_statistics.ex  paper_mario_rando_statistics_web.ex
lib/paper_mario_rando_statistics/: application.ex  mailer.ex
lib/paper_mario_rando_statistics_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
racetime/: service.go
rest/: statistics.go
sql/: set_up_tables.sql
src/: api.rs  data.rs  main.rs  route.rs  utils.rs
src/duration/: mod.rs
statistics/: service.go  util_test.go  utils.go
test/support/: conn_case.ex
(+35 files in other folders)
