[package]
name = "paper_mario_rando_statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", features = ["default"]}
chrono = { version = "0.4.26", features = ["default"]}
axum = { version = "0.7.4", features = ["default"]}
axum-macros = { version = "0.4.1", features = ["default"] }
anyhow = { version = "*" }